ENH: separate AmpForm and DPD sliders

--- a/docs/jpsi2phipipi.ipynb
+++ b/docs/jpsi2phipipi.ipynb
@@ -49,6 +49,7 @@
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import SVG, Latex, Markdown, clear_output, display\n",
     "from ipywidgets import (\n",
+    "    Accordion,\n",
     "    Checkbox,\n",
     "    GridBox,\n",
     "    HBox,\n",
@@ -672,12 +673,32 @@
     "hide_expressions = Checkbox(description=\"Hide expressions\", value=True)\n",
     "simplify_expressions = Checkbox(description=\"Simplify\", value=True)\n",
     "ipywidgets.link((hide_expressions, \"value\"), (simplify_expressions, \"disabled\"))\n",
+    "\n",
+    "package_names = (\"AmpForm\", \"AmpForm-DPD\")\n",
     "ui = HBox(\n",
     "    [\n",
     "        VBox([resonance_selector, hide_expressions, simplify_expressions]),\n",
     "        Tab(\n",
     "            children=[\n",
-    "                GridBox([sliders[key] for key in sorted(sliders) if p.latex in key])\n",
+    "                Accordion(\n",
+    "                    children=[\n",
+    "                        GridBox(\n",
+    "                            [\n",
+    "                                sliders[key]\n",
+    "                                for key in sorted(sliders)\n",
+    "                                if p.latex in key\n",
+    "                                if (\n",
+    "                                    key[0] in {\"C\", \"H\"}\n",
+    "                                    if package == \"AmpForm\"\n",
+    "                                    else key.startswith(R\"\\mathcal{H}\")\n",
+    "                                )\n",
+    "                            ]\n",
+    "                        )\n",
+    "                        for package in package_names\n",
+    "                    ],\n",
+    "                    selected_index=1,\n",
+    "                    titles=package_names,\n",
+    "                )\n",
     "                for p in resonances\n",
     "            ],\n",
     "            titles=[to_unicode(p) for p in resonances],\n",
