DOC: add title and logo to website (#68)
* DOC: add sidebar links to related ComPWA projects

* DOC: remove "Symbolic" from website title
  Looks better in the left sidebar

* FIX: set correct SVG filenames

* FIX: silence caching warnings

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -81,6 +81,7 @@
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"  # mute TF\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
+    "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
     "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
   },
@@ -946,7 +947,7 @@
    "outputs": [],
    "source": [
     "if NO_TQDM:\n",
-    "    filename = \"d0-to-kkk-comparison.svg\"\n",
+    "    filename = \"jpsi2pipipi-comparison.svg\"\n",
     "    plt.savefig(filename)\n",
     "    display(SVG(filename))"
    ]
