MAINT: address Ruff issues

--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -650,7 +650,7 @@
    "source": [
     "def create_sliders() -> dict[str, ToggleButtons]:\n",
     "    all_parameters = dict(ampform_model.parameter_defaults.items())\n",
-    "    all_parameters.update(dict(dpd_model.parameter_defaults.items()))\n",
+    "    all_parameters.update(dpd_model.parameter_defaults.items())\n",
     "    sliders = {}\n",
     "    for symbol, value in all_parameters.items():\n",
     "        value = \"+1\"\n",
