DX: allow C408 error

--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -650,7 +650,7 @@
    "source": [
     "def create_sliders() -> dict[str, ToggleButtons]:\n",
     "    all_parameters = dict(ampform_model.parameter_defaults.items())\n",
-    "    all_parameters.update(dpd_model.parameter_defaults.items())\n",
+    "    all_parameters.update(dpd_model.parameter_defaults)\n",
     "    sliders = {}\n",
     "    for symbol, value in all_parameters.items():\n",
     "        value = \"+1\"\n",
@@ -899,8 +899,8 @@
     "    )\n",
     "\n",
     "    global lines\n",
-    "    amp_kwargs = {\"color\": \"r\", \"label\": \"ampform\", \"linestyle\": \"solid\"}\n",
-    "    dpd_kwargs = {\"color\": \"blue\", \"label\": \"dpd\", \"linestyle\": \"dotted\"}\n",
+    "    amp_kwargs = dict(color=\"r\", label=\"ampform\", linestyle=\"solid\")\n",
+    "    dpd_kwargs = dict(color=\"blue\", label=\"dpd\", linestyle=\"dotted\")\n",
     "    if lines is None:\n",
     "        sx = (s_edges[:-1] + s_edges[1:]) / 2\n",
     "        tx = (t_edges[:-1] + t_edges[1:]) / 2\n",
