--- a/docs/comparison/jpsi2phipipi.ipynb
+++ b/docs/comparison/jpsi2phipipi.ipynb
@@ -633,7 +633,7 @@
    "source": [
     "def create_sliders() -> dict[str, ToggleButtons]:\n",
     "    all_parameters = dict(ampform_model.parameter_defaults.items())\n",
-    "    all_parameters.update(dpd_model.parameter_defaults.items())\n",
+    "    all_parameters.update(dpd_model.parameter_defaults)\n",
     "    sliders = {}\n",
     "    for symbol, value in all_parameters.items():\n",
     "        value = \"+1\"\n",
@@ -883,8 +883,8 @@
     "    )\n",
     "\n",
     "    global lines\n",
-    "    amp_kwargs = {\"color\": \"r\", \"label\": \"ampform\", \"linestyle\": \"solid\"}\n",
-    "    dpd_kwargs = {\"color\": \"blue\", \"label\": \"dpd\", \"linestyle\": \"dotted\"}\n",
+    "    amp_kwargs = dict(color=\"r\", label=\"ampform\", linestyle=\"solid\")\n",
+    "    dpd_kwargs = dict(color=\"blue\", label=\"dpd\", linestyle=\"dotted\")\n",
     "    if lines is None:\n",
     "        sx1 = (s1_edges[:-1] + s1_edges[1:]) / 2\n",
     "        sx23 = (s23_edges[:-1] + s23_edges[1:]) / 2\n",
