--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -358,6 +358,9 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "toc_visible": true
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
