--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -29,7 +29,7 @@
     "import itertools\n",
     "import logging\n",
     "import os\n",
-    "from typing import TYPE_CHECKING, Iterable\n",
+    "from typing import TYPE_CHECKING, Any, Iterable\n",
     "\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,13 +37,7 @@
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth, formulate_form_factor\n",
     "from ampform.kinematics.phasespace import compute_third_mandelstam\n",
-    "from ampform.sympy import (\n",
-    "    UnevaluatedExpression,\n",
-    "    create_expression,\n",
-    "    implement_doit_method,\n",
-    "    make_commutative,\n",
-    "    perform_cached_doit,\n",
-    ")\n",
+    "from ampform.sympy import perform_cached_doit, unevaluated\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
@@ -279,13 +273,18 @@
    },
    "outputs": [],
    "source": [
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class RelativisticBreitWigner(UnevaluatedExpression):\n",
-    "    def __new__(cls, s, mass0, gamma0, m1, m2, angular_momentum, meson_radius):\n",
-    "        return create_expression(\n",
-    "            cls, s, mass0, gamma0, m1, m2, angular_momentum, meson_radius\n",
-    "        )\n",
+    "@unevaluated\n",
+    "class RelativisticBreitWigner(sp.Expr):\n",
+    "    s: Any\n",
+    "    mass0: Any\n",
+    "    gamma0: Any\n",
+    "    m1: Any\n",
+    "    m2: Any\n",
+    "    angular_momentum: Any\n",
+    "    meson_radius: Any\n",
+    "    _latex_repr_ = (\n",
+    "        R\"\\mathcal{{R}}_{{{angular_momentum}}}\\left({s}, {mass0}, {gamma0}\\right)\"\n",
+    "    )\n",
     "\n",
     "    def evaluate(self):\n",
     "        s, m0, w0, m1, m2, angular_momentum, meson_radius = self.args\n",
@@ -300,10 +299,6 @@
     "            name=Rf\"\\Gamma_{{{sp.latex(angular_momentum)}}}\",\n",
     "        )\n",
     "        return (m0 * w0) / (m0**2 - s - width * m0 * sp.I)\n",
-    "\n",
-    "    def _latex(self, printer, *args) -> str:\n",
-    "        s, m0, w0, _, _, L, *_ = map(printer._print, self.args)\n",
-    "        return Rf\"\\mathcal{{R}}_{{{L}}}\\left({s}, {m0}, {w0}\\right)\"\n",
     "\n",
     "\n",
     "bw = RelativisticBreitWigner(*sp.symbols(\"s m0 Gamma0 m1 m2 L R\"))\n",
@@ -330,11 +325,17 @@
    },
    "outputs": [],
    "source": [
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class FormFactor(UnevaluatedExpression):\n",
-    "    def __new__(cls, s, m1, m2, angular_momentum, meson_radius):\n",
-    "        return create_expression(cls, s, m1, m2, angular_momentum, meson_radius)\n",
+    "@unevaluated\n",
+    "class FormFactor(sp.Expr):\n",
+    "    s: Any\n",
+    "    m1: Any\n",
+    "    m2: Any\n",
+    "    angular_momentum: Any\n",
+    "    meson_radius: Any\n",
+    "\n",
+    "    _latex_repr_ = (\n",
+    "        R\"\\mathcal{{F}}_{{{angular_momentum}}}\\left({s}, {m1}, {m1}\\right)\"\n",
+    "    )\n",
     "\n",
     "    def evaluate(self):\n",
     "        s, m1, m2, angular_momentum, meson_radius = self.args\n",
@@ -345,10 +346,6 @@
     "            angular_momentum=angular_momentum,\n",
     "            meson_radius=meson_radius,\n",
     "        )\n",
-    "\n",
-    "    def _latex(self, printer, *args) -> str:\n",
-    "        s, m1, m2, L, *_ = map(printer._print, self.args)\n",
-    "        return Rf\"\\mathcal{{F}}_{{{L}}}\\left({s}, {m1}, {m1}\\right)\"\n",
     "\n",
     "\n",
     "ff = FormFactor(*sp.symbols(\"s m1 m2 L R\"))\n",
@@ -973,7 +970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
