--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -44,7 +44,7 @@
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
-    "from ampform.kinematics import FourMomentumSymbol, InvariantMass\n",
+    "from ampform.kinematics.lorentz import FourMomentumSymbol, InvariantMass\n",
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import SVG, Latex, Markdown, clear_output, display\n",
     "from ipywidgets import (\n",
