--- a/docs/comparison/jpsi2phipipi.ipynb
+++ b/docs/comparison/jpsi2phipipi.ipynb
@@ -44,7 +44,7 @@
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
-    "from ampform.kinematics import FourMomentumSymbol, InvariantMass\n",
+    "from ampform.kinematics.lorentz import FourMomentumSymbol, InvariantMass\n",
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import SVG, Latex, Markdown, clear_output, display\n",
     "from ipywidgets import (\n",
@@ -64,12 +64,7 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder, simplify_latex_rendering\n",
-    "from ampform_dpd.decay import (\n",
-    "    IsobarNode,\n",
-    "    Particle,\n",
-    "    ThreeBodyDecay,\n",
-    "    ThreeBodyDecayChain,\n",
-    ")\n",
+    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
     "    aslatex,\n",
@@ -81,11 +76,7 @@
     "if TYPE_CHECKING:\n",
     "    from ampform.helicity import HelicityModel\n",
     "    from qrules.transition import ReactionInfo\n",
-    "    from tensorwaves.interface import (\n",
-    "        DataSample,\n",
-    "        ParameterValue,\n",
-    "        ParametrizedFunction,\n",
-    "    )\n",
+    "    from tensorwaves.interface import DataSample, ParameterValue, ParametrizedFunction\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"jax\").setLevel(logging.ERROR)  # mute JAX\n",
@@ -497,9 +488,7 @@
    },
    "outputs": [],
    "source": [
-    "def generate_phase_space(\n",
-    "    reaction: ReactionInfo, size: int\n",
-    ") -> dict[str, jnp.ndarray]:\n",
+    "def generate_phase_space(reaction: ReactionInfo, size: int) -> dict[str, jnp.ndarray]:\n",
     "    rng = TFUniformRealNumberGenerator(seed=0)\n",
     "    phsp_generator = TFPhaseSpaceGenerator(\n",
     "        initial_state_mass=reaction.initial_state[-1].mass,\n",
@@ -534,8 +523,7 @@
     "def unfold_intensity(model: HelicityModel) -> sp.Expr:\n",
     "    unfolded_intensity = perform_cached_doit(model.intensity)\n",
     "    unfolded_amplitudes = {\n",
-    "        symbol: perform_cached_doit(expr)\n",
-    "        for symbol, expr in model.amplitudes.items()\n",
+    "        symbol: perform_cached_doit(expr) for symbol, expr in model.amplitudes.items()\n",
     "    }\n",
     "    return unfolded_intensity.xreplace(unfolded_amplitudes)\n",
     "\n",
@@ -638,8 +626,7 @@
     "    for symbol, value in all_parameters.items():\n",
     "        value = \"+1\"\n",
     "        if (\n",
-    "            symbol.name.startswith(R\"\\mathcal{H}^\\mathrm{decay}\")\n",
-    "            and \"+\" in symbol.name\n",
+    "            symbol.name.startswith(R\"\\mathcal{H}^\\mathrm{decay}\") and \"+\" in symbol.name\n",
     "        ) and any(s in symbol.name for s in [\"{1}\", \"*\", \"rho\"]):\n",
     "            value = \"-1\"\n",
     "        sliders[symbol.name] = ToggleButtons(\n",
@@ -671,7 +658,7 @@
     "    options={to_unicode(p): p.latex for p in resonances},\n",
     "    value=[resonances[0].latex, resonances[1].latex],\n",
     "    layout=Layout(\n",
-    "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
+    "        height=f\"{14 * (len(resonances) + 1)}pt\",\n",
     "        width=\"auto\",\n",
     "    ),\n",
     ")\n",
@@ -809,9 +796,7 @@
     "    ampform_intensities = compute_sub_intensities(\n",
     "        ampform_func, ampform_phsp, selected_resonances\n",
     "    )\n",
-    "    dpd_intensities = compute_sub_intensities(\n",
-    "        dpd_func, dpd_phsp, selected_resonances\n",
-    "    )\n",
+    "    dpd_intensities = compute_sub_intensities(dpd_func, dpd_phsp, selected_resonances)\n",
     "\n",
     "    s1_edges = jnp.linspace(0.2, 2.1, num=50)\n",
     "    s23_edges = jnp.linspace(1.1, 3.0, num=50)\n",
