--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -47,12 +47,7 @@
     "    _get_particle,\n",
     "    simplify_latex_rendering,\n",
     ")\n",
-    "from ampform_dpd.decay import (\n",
-    "    IsobarNode,\n",
-    "    Particle,\n",
-    "    ThreeBodyDecay,\n",
-    "    ThreeBodyDecayChain,\n",
-    ")\n",
+    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
     "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
@@ -184,9 +179,7 @@
     "        child1, child2, spectator = Σ, pbar, K\n",
     "    else:\n",
     "        raise NotImplementedError\n",
-    "    prod_ls_couplings = _generate_ls(\n",
-    "        Jpsi, resonance, spectator, conserve_parity=False\n",
-    "    )\n",
+    "    prod_ls_couplings = _generate_ls(Jpsi, resonance, spectator, conserve_parity=False)\n",
     "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
     "    if min_ls:\n",
     "        decay = IsobarNode(\n",
@@ -333,9 +326,7 @@
     "    angular_momentum: Any\n",
     "    meson_radius: Any\n",
     "\n",
-    "    _latex_repr_ = (\n",
-    "        R\"\\mathcal{{F}}_{{{angular_momentum}}}\\left({s}, {m1}, {m1}\\right)\"\n",
-    "    )\n",
+    "    _latex_repr_ = R\"\\mathcal{{F}}_{{{angular_momentum}}}\\left({s}, {m1}, {m1}\\right)\"\n",
     "\n",
     "    def evaluate(self):\n",
     "        s, m1, m2, angular_momentum, meson_radius = self.args\n",
@@ -377,9 +368,7 @@
     "    decay_chain: ThreeBodyDecayChain,\n",
     ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
     "    production_node = decay_chain.decay\n",
-    "    assert isinstance(\n",
-    "        production_node.child1, IsobarNode\n",
-    "    ), \"Not a 3-body isobar decay\"\n",
+    "    assert isinstance(production_node.child1, IsobarNode), \"Not a 3-body isobar decay\"\n",
     "    decay_node = production_node.child1\n",
     "\n",
     "    s = _get_mandelstam_s(decay_chain)\n",
