DOC: import `simplify_latex_rendering` from `io`

--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -63,13 +63,14 @@
     "from tensorwaves.data.rng import TFUniformRealNumberGenerator\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, simplify_latex_rendering\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
     "    aslatex,\n",
     "    get_readable_hash,\n",
     "    perform_cached_lambdify,\n",
+    "    simplify_latex_rendering,\n",
     ")\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
