--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -42,13 +42,14 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from ampform_dpd import (\n",
-    "    DalitzPlotDecompositionBuilder,\n",
-    "    _get_particle,\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, _get_particle\n",
+    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    perform_cached_lambdify,\n",
     "    simplify_latex_rendering,\n",
     ")\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "if TYPE_CHECKING:\n",
