--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -33,10 +33,10 @@
     "import sympy as sp\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, simplify_latex_rendering\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
     "from ampform_dpd.dynamics import BreitWignerMinL\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, simplify_latex_rendering\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()"
