BREAK: remove `perform_cached_doit()` function (#97)
* DOC: import `simplify_latex_rendering` from `io`

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -42,13 +42,14 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from ampform_dpd import (\n",
-    "    DalitzPlotDecompositionBuilder,\n",
-    "    _get_particle,\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, _get_particle\n",
+    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    perform_cached_lambdify,\n",
     "    simplify_latex_rendering,\n",
     ")\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "if TYPE_CHECKING:\n",
@@ -577,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The {meth}`~sympy.core.basic.Basic.doit` operation can be cached to disk with {func}`.perform_cached_doit`. We do this twice, once for the unfolding of the {attr}`~.AmplitudeModel.intensity` expression and second for the substitution and unfolding of the {attr}`~.AmplitudeModel.amplitudes`. Note that we could also have unfolded the intensity and substituted the amplitudes with {attr}`~.AmplitudeModel.full_expression`, but then the unfolded {attr}`~.AmplitudeModel.intensity` expression is not cached."
+    "The {meth}`~sympy.core.basic.Basic.doit` operation can be cached to disk with {func}`~ampform.sympy.perform_cached_doit`. We do this twice, once for the unfolding of the {attr}`~.AmplitudeModel.intensity` expression and second for the substitution and unfolding of the {attr}`~.AmplitudeModel.amplitudes`. Note that we could also have unfolded the intensity and substituted the amplitudes with {attr}`~.AmplitudeModel.full_expression`, but then the unfolded {attr}`~.AmplitudeModel.intensity` expression is not cached."
    ]
   },
   {
