DOC: generate J/psi decay figure with QRules

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -29,13 +29,16 @@
     "import itertools\n",
     "import logging\n",
     "import os\n",
+    "import warnings\n",
     "from typing import TYPE_CHECKING, Any, Iterable\n",
     "\n",
+    "import graphviz\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth, formulate_form_factor\n",
+    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from ampform.kinematics.phasespace import compute_third_mandelstam\n",
     "from ampform.sympy import perform_cached_doit, unevaluated\n",
     "from IPython.display import Latex, Markdown\n",
@@ -52,14 +55,15 @@
     ")\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
-    "if TYPE_CHECKING:\n",
-    "    from tensorwaves.interface import DataSample, ParametrizedFunction\n",
-    "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
+    "warnings.simplefilter(\"ignore\")\n",
+    "\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
-    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
+    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
+    "if TYPE_CHECKING:\n",
+    "    from tensorwaves.interface import DataSample, ParametrizedFunction"
    ]
   },
   {
@@ -73,13 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We follow [this example](https://qrules.readthedocs.io/en/0.9.7/usage.html#investigate-intermediate-resonances), which was generated with QRules, and leave out the $K$-resonances and the resonances that lie far outside of phase space:\n",
-    "\n",
-    "![](https://qrules.readthedocs.io/en/0.9.7/_images/usage_9_0.svg)\n",
-    "\n",
-    ":::{warning}\n",
-    "In the above figure, the final states are labeled `0`, `1`, `2`, but in the DPD formalism, the final states are labeled `1`, `2`, `3`.\n",
-    ":::"
+    "We follow [this example](https://qrules.readthedocs.io/en/0.10.1/usage.html#investigate-intermediate-resonances), which was generated with QRules, and leave out the $K$-resonances and the resonances that lie far outside of phase space."
    ]
   },
   {
@@ -89,6 +87,28 @@
     "jupyter": {
      "source_hidden": true
     },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "REACTION = qrules.generate_transitions(\n",
+    "    initial_state=\"J/psi(1S)\",\n",
+    "    final_state=[\"K0\", \"Sigma+\", \"p~\"],\n",
+    "    allowed_interaction_types=\"strong\",\n",
+    "    formalism=\"helicity\",  # AmpForm-DPD already generates LS couplings\n",
+    "    mass_conservation_factor=0.05,\n",
+    ")\n",
+    "REACTION = relabel_edge_ids(REACTION)\n",
+    "dot = qrules.io.asdot(REACTION, collapse_graphs=True)\n",
+    "graphviz.Source(dot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "tags": [
      "hide-input"
     ]
@@ -960,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
