--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -154,14 +154,14 @@
    },
    "outputs": [],
    "source": [
-    "reaction = qrules.generate_transitions(\n",
+    "REACTION = qrules.generate_transitions(\n",
     "    initial_state=INITIAL_STATE.name,\n",
     "    final_state=[p.name for p in FINAL_STATE],\n",
     "    allowed_intermediate_particles=[\"a(0)\", \"f(0)(980)\", \"pi(1)\"],\n",
     "    mass_conservation_factor=0.2,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
-    "dot = qrules.io.asdot(reaction, collapse_graphs=True)\n",
+    "dot = qrules.io.asdot(REACTION, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
   },
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "qrules_resonances = sorted(\n",
-    "    reaction.get_intermediate_particles(),\n",
+    "    REACTION.get_intermediate_particles(),\n",
     "    key=lambda p: (p.charge, p.mass, p.name),\n",
     ")\n",
     "resonance_names = [p.name for p in qrules_resonances]\n",
@@ -415,7 +415,7 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = ampform.get_builder(reaction)\n",
+    "model_builder = ampform.get_builder(REACTION)\n",
     "model_builder.use_helicity_couplings = False\n",
     "ampform_model = model_builder.formulate()\n",
     "ampform_model.intensity"
@@ -1022,7 +1022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
