--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -45,6 +45,7 @@
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
+    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from ampform.kinematics.lorentz import FourMomentumSymbol, InvariantMass\n",
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import SVG, Latex, Markdown, clear_output, display\n",
@@ -161,7 +162,8 @@
     "    mass_conservation_factor=0,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
-    "dot = qrules.io.asdot(REACTION, collapse_graphs=True)\n",
+    "REACTION123 = relabel_edge_ids(REACTION)\n",
+    "dot = qrules.io.asdot(REACTION123, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
   },
