ENH: make `ThreeBodyDecay` sortable

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -159,7 +159,7 @@
     "    \"N(1710)+\",\n",
     "    \"N(1720)+\",\n",
     "]\n",
-    "resonances = [PARTICLE_DB[name] for name in resonance_names]\n",
+    "resonances = sorted(PARTICLE_DB[name] for name in resonance_names)\n",
     "Markdown(as_markdown_table(resonances))"
    ]
   },
@@ -187,7 +187,7 @@
     "        chains.extend(_create_isobar(res, min_ls))\n",
     "    return ThreeBodyDecay(\n",
     "        states={state_id: particle for particle, state_id in PARTICLE_TO_ID.items()},\n",
-    "        chains=tuple(chains),\n",
+    "        chains=tuple(sorted(chains)),\n",
     "    )\n",
     "\n",
     "\n",
