--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -180,7 +180,7 @@
     "        child1, child2, spectator = Σ, pbar, K\n",
     "    else:\n",
     "        raise NotImplementedError\n",
-    "    prod_ls_couplings = _generate_ls(Jpsi, resonance, spectator, conserve_parity=False)\n",
+    "    prod_ls_couplings = _generate_ls(Jpsi, resonance, spectator, conserve_parity=True)\n",
     "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
     "    if min_ls:\n",
     "        decay = IsobarNode(\n",
