FIX: write Λ<sub>c</sub> in title

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Λc⁺ → p π⁺ K⁻\n",
+    "# Λ<sub>c</sub>⁺ → p π⁺ K⁻\n",
     "\n",
     "```{autolink-concat}\n",
     "```"
