--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -34,6 +34,7 @@
     "import itertools\n",
     "import logging\n",
     "import os\n",
+    "import warnings\n",
     "from textwrap import dedent\n",
     "from typing import TYPE_CHECKING, Iterable\n",
     "\n",
@@ -82,6 +83,7 @@
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"jax\").setLevel(logging.ERROR)  # mute JAX\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"  # mute TF\n",
+    "warnings.simplefilter(\"ignore\")\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
     "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
@@ -301,6 +303,7 @@
      "source_hidden": true
     },
     "tags": [
+     "full-width",
      "hide-input"
     ]
    },
